Adjusts small alignment issues
Adds changelog entry

#1952

--- a/visualization/app/codeCharta/ui/colorSettingsPanel/colorSettingsPanel.component.scss
+++ b/visualization/app/codeCharta/ui/colorSettingsPanel/colorSettingsPanel.component.scss
@@ -16,6 +16,11 @@ color-settings-panel-component {
 	top: 45px;
 	right: 0;
 
+	range-slider-component {
+		margin-top: 4px;
+		margin-left: 3px;
+	}
+
 	.wrapper {
 		margin-left: 3px;
 	}
